# browser-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
docs/: playwright-mcp-tools.md
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  agent_node.py  tools_node.py
src/agent/nodes/reflection/: __init__.py  progress_analyzer.py  quality_evaluator.py  self_corrector.py  strategy_adapter.py
src/agent/nodes/special/: __init__.py  human_in_loop.py  memory_manager.py  progress_reporter.py
src/agent/nodes/validation/: __init__.py  critical_action_validator.py  goal_validator.py
src/agent/prompts/: __init__.py  base.py  browser_rules.py  error_recovery.py  playwright_patterns.py
src/agent/prompts/examples/: complex.py  simple.py
src/agent/tools/: __init__.py  _executor.py  _selectors.py  _templates.py  exploration.py  extraction.py  fallback.py  interaction.py  navigation.py  special.py  tabs.py  user_confirmation.py  waiting.py
src/ui/: cli.py
src/utils/: config.py  logger.py
